Remove attempts at repainting (since separated selectors fixes the problem); reduce spacing between .edit-options list items in ie8

--- a/static_files/assets/scss/_layout.scss
+++ b/static_files/assets/scss/_layout.scss
@@ -242,6 +242,9 @@ header {
       > li {
         float: left;
         margin-right: 15px;
+        @include body-prefix(ie8) {
+          margin-right: 8px;
+        }
 
         &.last-child {
           margin-right: 0;
